ready for release

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.0.1
-Date: ????
+Version: 1.0.0
+Date: 2024-12-08
   Features:
     - First release
