--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Add more multiplayer related fixes
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2025-01-12
