--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.1.1
+Version: 1.2.0
 Date: ????
   Bugfixes:
     - Add more multiplayer related fixes
+    - fix cut and paste error in entity detection (trains work again)
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2025-01-12
