--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.2.2
+Version: 1.3.0
 Date: ????
   Changes:
+    - Display quality for items correctly in the preview
+    - Fix a bug where autosaving with an open GUI threw an error.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2025-01-13
