--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
-Date: ????
+Date: 2025-01-29
   Changes:
+    - Support migration from all older Inventory sensor versions
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2025-01-26
