--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
-Date: ????
-  Changes:
+Date: 2025-01-30
+  Bugfixes:
+    - do not require the entities again; the make_4way_animation_from_spritesheet function is
+      global and it wreaks havoc with mods that modify the base entities (in this case Better Roboports)
+      reported (and insisted upon) by @Hoochie on the mod forums. Thank you.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2025-01-29
