--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
-Date: ????
-  Changes:
+Date: 2025-02-03
+  Bugfixes:
+    - Fix crash when trying to migrate old inventory sensors without the mod being present.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2025-01-30
