--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
-Date: ????
+Date: 2025-02-04
   Changes:
+    - Maintain configuration across undo/redo
+    - Move scan_range and scan_offset to startup settings
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2025-02-03
