--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2025-02-04
   Changes:
