--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
-Date: ????
-  Changes:
+Date: 2025-02-21
+  Bugfixes:
+    - Allow blueprinting when selecting contents for an existing blueprint
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2025-02-04
