--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.2
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025-02-22
   Bugfixes:
