--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
-Date: ????
+Date: 2025-03-15
   Changes:
     - Add rocket progress signals
 ---------------------------------------------------------------------------------------------------
