--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.3
 Date: ????
+  Bugfixes:
+    - Fix oversized quality icons on non-native displays
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
