--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
-Date: ????
+Date: 2025-06-22
   Changes:
     - Use native quality rendering
     - Add virtual signals for inventory information (thanks @fctrusr for a PR!)
