preparing release of version 1.5.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.1
-Date: ????
+Date: 2025-06-30
   Bugfixes:
     - Fix a crash with fluid wagons if inventory signals are active
 ---------------------------------------------------------------------------------------------------
