--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,9 @@
 Version: 1.5.2
 Date: ????
   Changes:
+    - move debug setting to startup
+  Bugfixes:
+    - handle blueprint updates correctly when the blueprint is in the player library
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.1
 Date: 2025-06-30
