--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.2
-Date: ????
+Date: 2025-09-13
   Changes:
     - move debug setting to startup
   Bugfixes:
