--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
-Date: ????
+Date: 2025-11-16
   Changes:
     - Inventories are now listed and can be selected separately
     - Supports invert and quantity/one values for signals
